--- a/Index.html
+++ b/Index.html
@@ -135,7 +135,7 @@
                 <br>
                 <br>
                 <span style="font-size: 2.5rem;">Technologies : </span><span style="font-size: 2rem;">html, css,
-                    bootstrap, JavaScripit (Vanilla, es6+, oop, promises, fetch, async, object entries)</span>
+                    bootstrap, JavaScripit (Vanilla, es6+, oop, promises, fetch, async)</span>
                 <br>
                 <br>
                 <span style="font-size: 3rem;">Enter a Full name of the NBA 🤾 player and SCROLL DOWN to see<br> the
