--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,8 @@
                     bootstrap, JavaScripit (Vanilla, es6+, oop, promises, fetch, async)</span>
                 <br>
                 <br>
-                <span style="font-size: 3rem;">Enter a Full name of the NBA 🤾 player and SCROLL DOWN to see<br> the
+                <span style="font-size: 3rem;">Enter a Full name of the NBA 🤾 player at Season 2019-2020 and SCROLL
+                    DOWN to see<br> the
                     Stats📊
                     !
 
