--- a/Index.html
+++ b/Index.html
@@ -139,7 +139,7 @@
                 <br>
                 <br>
                 <span style="font-size: 3rem;">Enter a Full name of the NBA 🤾 player at Season 2019-2020 and SCROLL
-                    DOWN to see<br> the
+                    DOWN to see the
                     Stats📊
                     !
 
